<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.main.fragment.MyExpanse.MyExpenseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1.5">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.12"
            android:gravity="left"
            android:text="@string/str_my_expenses"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="0.38"
            android:paddingLeft="5dp"
            app:cardCornerRadius="10dp">

            <Spinner
                android:id="@+id/spn_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:spinnerMode="dropdown" />

        </androidx.cardview.widget.CardView>

        <!--        <RelativeLayout-->
        <!--            android:id="@+id/spinnerLayout"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="65dp"-->
        <!--            android:layout_marginRight="3dp"-->
        <!--            android:layout_weight=".4"-->
        <!--            android:gravity="center"-->
        <!--            android:orientation="horizontal">-->

        <!--            <Spinner-->
        <!--                android:id="@+id/spn_report"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="45dp"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginLeft="5dp"-->
        <!--                android:background="@android:color/transparent"-->
        <!--                android:gravity="center"-->
        <!--                android:spinnerMode="dropdown" />-->

        <!--            <ImageView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="45dp"-->
        <!--                android:layout_alignParentEnd="true"-->
        <!--                android:layout_alignParentRight="true"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginRight="10dp"-->
        <!--                android:src="@drawable/down_arrow_yellow" />-->

        <!--        </RelativeLayout>-->
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        app:cardCornerRadius="10dp">

        <com.github.mikephil.charting.charts.BubbleChart
            android:id="@+id/BubbleChart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2.2"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/blur_purple"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/up_arrow" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_total_income"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="left"
                            android:text="$00"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="left"
                            android:text="@string/str_income"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!--                    <FrameLayout-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content">-->

                    <!--                        <ImageView-->
                    <!--                            android:layout_width="40dp"-->
                    <!--                            android:layout_height="40dp"-->
                    <!--                            style="@style/MyButtonStyle"/>-->


                    <!--                        <ImageView-->
                    <!--                            android:layout_width="40dp"-->
                    <!--                            android:layout_height="40dp"-->
                    <!--                            android:src="@drawable/down_arrow" />-->
                    <!--                    </FrameLayout>-->

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/blur_yellow"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/down_arrow_yellow" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_total_Expense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="left"
                            android:text="$00"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="left"
                            android:text="@string/str_expense"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="you saved"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_total_saving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="$00"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/str_transaction"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3.3"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txt_trans_nodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="No Data Available"
                android:textColor="@color/purple_500"
                android:textSize="25dp"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>